<?xml version="1.0" encoding="utf-8"?>
<!--  
 UOC - Universitat Oberta de Catalunya
 Proyecto Final Master Software Libre
 Septiembre 2011
  
 LoadSensing para WorldSensing
 
 @authors
 	Ruben Mendez Puente
 	Jesus Sanchez-Migallon Perez
 
 Licensed to the Apache Software Foundation (ASF) under one 
 or more contributor license agreements.  See the NOTICE file
 distributed with this work for additional information
 regarding copyright ownership.  The ASF licenses this file
 to you under the Apache License, Version 2.0 (the
 "License"); you may not use this file except in compliance
 with the License.  You may obtain a copy of the License at
 
      http://www.apache.org/licenses/LICENSE-2.0
       
 Unless required by applicable law or agreed to in writing,
 software distributed under the License is distributed on an
 "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 KIND, either express or implied.  See the License for the
 specific language governing permissions and limitations
 under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
			<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    			android:layout_width="fill_parent"
    			android:layout_height="fill_parent"
    			android:stretchColumns="1">

			    <TableRow>
		    
        			<TextView
        				android:id="@+id/dev_name"
        				android:layout_span="3"
	  					android:textSize="10sp" 
	  					android:textStyle="bold" 
	  					android:textColor="#7db229"         				
            			android:layout_column="1"
            			android:padding="3dip" />
				
				</TableRow>
				
			    <TableRow>
		    
        			<TextView
            			android:layout_column="1"
            			android:textSize="8sp" 
            			android:text="@string/dev_id"
            			android:padding="3dip" />
        			<TextView
            			android:id="@+id/dev_id"
            			android:textSize="8sp" 
            			android:gravity="right"
            			android:padding="3dip" />
    			</TableRow>
    			
			    <TableRow>
        			<TextView
            			android:layout_column="1"
            			android:textSize="8sp"
            			android:text="@string/dev_voltage"
            			android:padding="3dip" />
        			<TextView
            			android:id="@+id/dev_voltage"
            			android:textSize="8sp" 
            			android:gravity="right"
            			android:padding="3dip" />
    			</TableRow>
			    <TableRow>
        			<TextView
            			android:layout_column="1"
            			android:textSize="8sp"
            			android:text="@string/dev_temp"
            			android:padding="3dip" />
        			<TextView
            			android:id="@+id/dev_temp"
            			android:textSize="8sp" 
            			android:gravity="right"
            			android:padding="3dip" />
    			</TableRow>    			    
			</TableLayout>
</LinearLayout>