<?xml version="1.0" encoding="utf-8"?>
<!--  
 UOC - Universitat Oberta de Catalunya
 Proyecto Final Master Software Libre
 Septiembre 2011
  
 LoadSensing para WorldSensing
 
 @authors
 	Ruben Mendez Puente
 	Jesus Sanchez-Migallon Perez
 
 Licensed to the Apache Software Foundation (ASF) under one 
 or more contributor license agreements.  See the NOTICE file
 distributed with this work for additional information
 regarding copyright ownership.  The ASF licenses this file
 to you under the Apache License, Version 2.0 (the
 "License"); you may not use this file except in compliance
 with the License.  You may obtain a copy of the License at
 
      http://www.apache.org/licenses/LICENSE-2.0
       
 Unless required by applicable law or agreed to in writing,
 software distributed under the License is distributed on an
 "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 KIND, either express or implied.  See the License for the
 specific language governing permissions and limitations
 under the License.
-->
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout 
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content" android:background="@color/background_app">
  		
  		<!--  Header  Starts-->
  		<LinearLayout android:id="@+id/header"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content"
  				android:background="@layout/header_gradient" 
  				android:paddingTop="5dip"
  				android:paddingBottom="5dip">
  				<!-- Logo Start-->
  				<ImageView android:src="@drawable/logo"
  							android:layout_width="wrap_content"
  							android:layout_height="wrap_content"
  							android:layout_marginLeft="12dip"/>
  				<!-- Logo Ends -->
  		</LinearLayout>
  		<!--  Header Ends -->  
  		<!-- Footer Start -->
  		<LinearLayout android:id="@+id/footer"
  				android:layout_width="fill_parent"
  				android:layout_height="45dip"
  				android:background="@layout/footer_repeat"
  				android:layout_alignParentBottom="true">
  		</LinearLayout>
  		<!-- Footer Ends -->
  		
  		<!-- Login Form -->
		<LinearLayout
		  xmlns:android="http://schemas.android.com/apk/res/android"
		  android:orientation="vertical"
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content"
		  android:padding="10dip"
		  android:layout_below="@id/header">
		  <!--  Email Label -->
		  <TextView android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginLeft="12dip"
		  		android:layout_marginRight="12dip"
		  		android:layout_marginTop="2dip"
		  		android:textColor="#FFF"
		  		android:textSize="16sp"
		  		android:textStyle="bold"
		  		android:text="@string/user_name"/>
		  <EditText android:id="@+id/et_user" 
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_margin="8dip" 
	            android:maxLines="1"
	            android:textColor="#000"
	            android:text="" />
		  		<!--  android:layout_marginTop="5dip" android:layout_marginBottom="20dip"
		  		android:singleLine="true"/> -->
		  <!--  Password Label -->
		  <TextView android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginLeft="12dip"
		  		android:layout_marginRight="12dip"
		  		android:layout_marginTop="2dip"
		  		android:textColor="#FFF"
		  		android:textSize="16sp"
		  		android:textStyle="bold"
		  		android:text="@string/user_pass"/>
		  <EditText android:id="@+id/et_pass" 
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_margin="8dip" 
	            android:maxLines="1"
	            android:textColor="#000"
	            android:text=""
		  		android:password="true"/>
		  <!-- Login button -->	
		  <Button android:id="@+id/btnLogin" 
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginLeft="40dip"
		  		android:layout_marginRight="40dip"
		  		android:layout_marginTop="20dip"
		  		android:layout_marginBottom="12dip"
		  		style="@style/LoginButton"
		  		android:text="Login"/>
		  <!-- Link to Registration Screen -->		
		  <TextView android:id="@+id/visit_worldsensing" 
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginLeft="12dip"
		  		android:layout_marginRight="12dip"
		  		android:layout_marginTop="2dip"
		  		android:textColor="#FFF"
		  		android:textSize="16sp"
		  		android:textStyle="bold"
		  		android:text="@string/visit_ws"
		  		android:gravity="center"/>
		    
		</LinearLayout>
  		<!-- Login Form Ends --> 		
  		
  </RelativeLayout>
</ScrollView>
